[gd_scene load_steps=7 format=2]

[ext_resource path="res://res/panel_secondary_color.tres" type="StyleBox" id=1]
[ext_resource path="res://res/button_white_hover_styleboxflat.tres" type="StyleBox" id=2]
[ext_resource path="res://res/button_white_styleboxflat.tres" type="StyleBox" id=3]
[ext_resource path="res://res/Helvetica_bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/LeftPanel.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="LeftPanel" type="Panel"]
margin_right = 360.0
margin_bottom = 720.0
rect_min_size = Vector2( 360, 720 )
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginTop" type="MarginContainer" parent="VBoxContainer"]
margin_right = 360.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="NewClassContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 360.0
margin_bottom = 129.0
size_flags_horizontal = 5

[node name="MarginLeft" type="MarginContainer" parent="VBoxContainer/NewClassContainer"]
margin_right = 16.0
margin_bottom = 105.0
rect_min_size = Vector2( 0, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonsGridContainer" type="GridContainer" parent="VBoxContainer/NewClassContainer"]
margin_left = 20.0
margin_right = 340.0
margin_bottom = 105.0
size_flags_horizontal = 5
custom_constants/vseparation = 15
custom_constants/hseparation = 20

[node name="NewSubjectButton" type="Button" parent="VBoxContainer/NewClassContainer/ButtonsGridContainer"]
margin_right = 320.0
margin_bottom = 45.0
rect_min_size = Vector2( 320, 45 )
size_flags_vertical = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.235294, 0.498039, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Gérer les cours et les matières"

[node name="NewLessonButton" type="Button" parent="VBoxContainer/NewClassContainer/ButtonsGridContainer"]
margin_top = 60.0
margin_right = 320.0
margin_bottom = 105.0
rect_min_size = Vector2( 280, 45 )
size_flags_vertical = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.235294, 0.498039, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Ajouter un cours"

[node name="MarginRight" type="MarginContainer" parent="VBoxContainer/NewClassContainer"]
margin_left = 344.0
margin_right = 360.0
margin_bottom = 105.0
rect_min_size = Vector2( 0, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 133.0
margin_right = 360.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MarginLeft" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 5.0
margin_bottom = 587.0
rect_min_size = Vector2( 5, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 5.0
margin_right = 360.0
margin_bottom = 587.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 355.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ClassContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer"]
margin_right = 355.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CMLabelHBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer"]
margin_right = 355.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="LeftHBar" type="ColorRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer/CMLabelHBoxContainer"]
margin_top = 39.0
margin_right = 89.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color( 0.427451, 0.623529, 1, 1 )

[node name="CMLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer/CMLabelHBoxContainer"]
margin_left = 93.0
margin_top = 29.0
margin_right = 262.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Cours Magistraux"
align = 1
valign = 1

[node name="RightHbar" type="ColorRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer/CMLabelHBoxContainer"]
margin_left = 266.0
margin_top = 39.0
margin_right = 355.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color( 0.427451, 0.623529, 1, 1 )

[node name="CMContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer"]
margin_left = 177.0
margin_top = 80.0
margin_right = 177.0
margin_bottom = 80.0
size_flags_horizontal = 6
custom_constants/vseparation = 10
custom_constants/hseparation = 10

[node name="TDLabelHBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer"]
margin_top = 80.0
margin_right = 355.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3

[node name="LeftHBar" type="ColorRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer/TDLabelHBoxContainer"]
margin_top = 59.0
margin_right = 98.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color( 0.427451, 0.623529, 1, 1 )

[node name="TDLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer/TDLabelHBoxContainer"]
margin_left = 102.0
margin_top = 49.0
margin_right = 252.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Travaux Dirigés"
align = 1
valign = 1

[node name="RightHbar" type="ColorRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer/TDLabelHBoxContainer"]
margin_left = 256.0
margin_top = 59.0
margin_right = 355.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color( 0.427451, 0.623529, 1, 1 )

[node name="TDContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/ClassContainer"]
margin_left = 177.0
margin_top = 200.0
margin_right = 177.0
margin_bottom = 567.0
size_flags_horizontal = 6
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10

[node name="MarginBottom" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 567.0
margin_right = 355.0
margin_bottom = 587.0
rect_min_size = Vector2( 0, 20 )

[node name="MarginRight" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 350.0
margin_right = 360.0
margin_bottom = 977.0
rect_min_size = Vector2( 10, 0 )

[node name="Temp" type="Node2D" parent="."]
visible = false
position = Vector2( -1395.15, -244.106 )
